# pomidor

./: .ExampleEnv  .gitignore  README.md  deploy.sh
backend/auth_service/: .gitignore  Makefile  README.md  alembic.ini  app.py  config.py  database.py  pt.py  pyproject.toml  requirements.txt
backend/auth_service/app/: app.py  database.py  depends.py  main.py
backend/auth_service/app/core/: config.py  httpexceptions.py
backend/auth_service/app/models/: action.py  auth.py  department.py  district.py  district_group.py  division.py  group.py  management.py  position.py  position_list.py  role.py  service.py  service_table.py  subordinates_by_uuid.py  user.py  user_backend_payload.py  user_frontend_payload.py  user_payload.py
backend/auth_service/app/repository/: admin_repository.py  auth_repository.py  database.py  userRepository.py  user_repository.py
backend/auth_service/app/schemas/: auth.py  district.py  district_group.py  group.py  position_list.py  user.py  user_token_data.py
backend/auth_service/app/service/: admin_service.py  auth_email_service.py  auth_service.py  jwt_service.py  userService.py  user_service.py
backend/auth_service/app/services/: auth_service.py  email_service.py  user_service.py
backend/auth_service/app/templates/: base.html  login.html  register.html  reset_password.html
backend/auth_service/app/utils/: email_service.py  jwt_utils.py  password_utils.py
backend/auth_service/auth/: httpexceptions.py  router.py
backend/auth_service/docker/: Dockerfile
backend/auth_service/repository/: userRepository.py
backend/auth_service/schema/: user.py
backend/auth_service/service/: userService.py
backend/auth_service/test/: connection_test.py
backend/loader/: Makefile  jupitre.ipynb  main.py  pyproject.toml  requirements.txt  start_loader.sh
backend/loader/app/: renovation_etl.py
backend/loader/app/core/: config.py
backend/loader/app/models/: base.py  point.py  source.py
backend/loader/app/repository/: database.py
backend/resettlement_department/: .gitignore  Makefile  README.md  create_matrix.py  create_offer.py  docker-compose.yaml  otu.py  pyproject.toml  requirements.txt  resettlement_backend.sh  run  temp_offer_insert.py  test.py  результаты_сопоставления.xlsx
backend/resettlement_department/app/: dbt.py  depends.py  endpoints  kostyl.py  kpu.xlsx  main.py  matching_result.xlsx  new_apart.xlsx  test.py  wave_test.py
backend/resettlement_department/app/RSM/: .envExample  RSM.py
backend/resettlement_department/app/core/: config.py  logger.py
backend/resettlement_department/app/handlers/: httpexceptions.py
backend/resettlement_department/app/models/: __init__.py  apartment.py  cin.py  family_apartment_needs.py  family_structure.py  history.py  mail_index.py  new_apart.py  offer.py  old_apart.py  order_decisions.py  status.py  user.py
backend/resettlement_department/app/repository/: README.MD  apartment.py  apartment_repository.py  cin_repository.py  dashboard_repository.py  database.py  env_repository.py  (+8 more)
backend/resettlement_department/docker/: Dockerfile
backend/resettlement_department/infrastructure/: redis.py
backend/resettlement_department/migra/: migra.sh
backend/resettlement_department/test/: config.py  insert.py  test1.py  test_APART_STATUS_MANY.py  test_APART_STATUS_WITH_ORDER.py  test_apart_status_model.py  test_tree.py
(+248 files in other folders)
