[project]
name = "resettlement-department"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "asyncpg==0.30.0",
    "attrs==24.3.0",
    "bcrypt==4.2.1",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.7",
    "colorama==0.4.6",
    "dnspython==2.7.0",
    "et-xmlfile==2.0.0",
    "fastapi==0.115.5",
    "fastapi-cli==0.0.5",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "jwt-tapo44ek==1.0.5",
    "lxml>=5.3.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "numpy==2.2.2",
    "openpyxl==3.1.5",
    "orjson==3.10.12",
    "outcome==1.3.0.post0",
    "packaging==24.2",
    "pandas==2.2.3",
    "passlib==1.7.4",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.2",
    "pydantic-core==2.27.1",
    "pydantic-extra-types==2.10.0",
    "pydantic-settings==2.6.1",
    "pygments==2.18.0",
    "pyjwt==2.10.1",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.19",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "rich==13.9.4",
    "selenium==4.28.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "sqlalchemy==2.0.36",
    "starlette==0.41.3",
    "trio==0.29.0",
    "trio-websocket==0.12.1",
    "typer==0.14.0",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "ujson==5.10.0",
    "urllib3==2.3.0",
    "uvicorn==0.32.1",
    "uvloop==0.21.0",
    "watchfiles==1.0.0",
    "webdriver-manager==4.0.2",
    "websocket-client==1.8.0",
    "websockets==14.1",
    "wsproto==1.2.0",
]
